--- a/vignettes/manual.Rnw
+++ b/vignettes/manual.Rnw
@@ -25,12 +25,14 @@
 
 \section{Package Configuration}
 
-\emph{tgstat} is written to optimize and / or expand some of R common functionality. Various methods are used to achieve this goal such as multitasking, using of BLAS interface, etc.
+\subsection{Use of BLAS Library}
 
-BLAS (Basic Linear Algebra Subprograms) is an interface that can tremendeously optimize some of the common mathematical calculations. Various processor vendors (Intel, ...) release their own implementations of BLAS that use specific hardware commands. Unfortunately vendor-specific BLAS might not be installed by default on your system. R comes with its own implementation of BLAS, yet its run-time performance is appalling.
+\emph{tgstat} aims to optimize and expand some of R's common functionality. Various
+approaches are used to achieve this goal, including the use of optimized functions provided by the Basic Linear Algebra Subprograms (BLAS) library. Many optimized BLAS implementations are available, both proprietary (e.g. Intel's MKL, Apple's vecLib) and opensource (e.g. OpenBLAS, ATLAS). Unfortunately, R often uses by default the reference BLAS implementation, which is known to have poor performance.
 
-tgstat runs the best if non-default BLAS is installed. Alternatively tgstat implements its own methods (multitasking, etc.) to boost the performance, which is the second best choice. Using the default R's implementation of BLAS is by far the worst choice and one should try to avoid it by all means.
+tgstat runs best when R is linked with an optimized BLAS implementation. However,
+having tgstat rely on the reference BLAS will result in very poor performance and is strongly discouraged. If your R implementation uses an optimized BLAS, set \texttt{options(tgs\_use.blas=TRUE)} to allow tgstat to make BLAS calls. Otherwise, set \texttt{options(tgs\_use.blas=FALSE)} (default) which instructs tgstat to avoid BLAS and instead rely only on its own optimization methods (e.g. multiprocessing). If in doubt, it is possible to run one of tgstat's CPU intensive functions (e.g. \texttt{tgs\_cor}) and compare its run time under both \texttt{options(tgs\_use.blas=FALSE)}.
 
-tgstat therefore needs to be instructed whether it should use BLAS interface or not. Use \texttt{options(tgs\_use.blas=T)} if non-default BLAS is installed on your system. If you are not sure, simply run some of the heavy functions with and without BLAS and compare the performance.
+Exact instructions for linking R with an optimized BLAS library are system dependent and are out of scope of this document.
 
 \end{document}
