--- a/README.Rmd
+++ b/README.Rmd
@@ -10,66 +10,14 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.path = "README-"
 )
-set.seed(19)
 ```
 
-# tgstat package - Tanay's group statistical utilities
+# tgstat
 
 The goal of tgstat is to provide fast and efficient statistical tools.
 
 ## Installation
 ```{r, eval=FALSE}
-devtools::install_bitbucket('tanaylab/tgstat@default')
-```
-
-## Correlation
-
-```{r}
-library(tgstat)
-rows <- 100
-cols <- 1000
-vals <- sample(1 : (rows * cols / 2), rows * cols, replace = T)
-m <- matrix(vals, nrow = rows, ncol = cols)
-m[sample(1 : (rows * cols), rows * cols / 1000)] <- NA
-
-r1 <- tgs_cor(m, spearman = F)
-
-r1[1:5, 1:5]
-```
-
-```{r}
-r2 <- tgs_cor(m, pairwise.complete.obs = T, spearman = T)
-r2[1:5, 1:5]
-```
-
-Especially useful for large matrices:
-```{r}
-rows <- 1000
-cols <- 1000
-vals <- sample(1 : (rows * cols / 2), rows * cols, replace = T)
-m <- matrix(vals, nrow = rows, ncol = cols)
-m[sample(1 : (rows * cols), rows * cols / 1000)] <- NA
-
-system.time(r1 <- tgs_cor(m, pairwise.complete.obs=TRUE, spearman = F))
-```
-
-Compared to base R:
-```{r}
-system.time(r2 <- cor(m, use='pairwise.complete.obs'))
-```
-
-## Euclidian distance
-```{r}
-system.time(d <- tgs_dist(m))
-```
-
-Compared to base R:
-```{r}
-system.time(d <- dist(m, method='euclidian'))
-```
-
-
-```{r}
-sessionInfo()
+install.packages('misha', repos=c(getOption('repos'), 'https://tanaylab.bitbucket.io/repo'))
 ```
 
