changed installation instructions to use github
Former-commit-id: 27d53dbf3392df66d08c3969c0c4a1af0f2c7865 [formerly 23ace35df476a045fb10e52f99078e2d16ad1f5e [formerly 9614dffb643d30b9cda7cc95c40436063332a278]]
Former-commit-id: b046165717e1061d4509261711007c69a3f62768
Former-commit-id: 1fcaaa4b006d9a1ba7c75e36a0d7daa40f5f72fc

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,6 @@ The goal of tgstat is to provide fast and efficient statistical tools.
 
 ## Installation
 ```{r, eval=FALSE}
-install.packages('tgstat', repos=c(getOption('repos'), 'https://tanaylab.bitbucket.io/repo'))
+install.packages('tgstat', repos=c(getOption('repos'), 'https://tanaylab.github.io/repo'))
 ```
 
