modified readme to use github
Former-commit-id: 3c77084a03eeacac9acd84f07449ae329ce9497e [formerly aebc11149763c2a38e5cd4d450fc31ffda32f16e [formerly 64e99b8a37c70e94ce463bd09712eb6d68880512]]
Former-commit-id: afd4d620be0dd8c421e8e41c1e8b4ef2812e2d75
Former-commit-id: a19f5e31c6d4c45b70d17565283d87be80ddfdf6

--- a/README.Rmd
+++ b/README.Rmd
@@ -11,6 +11,9 @@ knitr::opts_chunk$set(
   fig.path = "README-"
 )
 ```
+<!-- badges: start -->
+[![Travis build status](https://travis-ci.com/tanaylab/tgstat.svg?branch=master)](https://travis-ci.org/tanaylab/tgstat)
+<!-- badges: end -->
 
 # tgstat
 
