--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
 ```
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/tgstat)](https://CRAN.R-project.org/package=tgstat)
+[![R-CMD-check](https://github.com/tanaylab/tgstat/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/tanaylab/tgstat/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 # tgstat
@@ -41,6 +42,7 @@ remotes::install_github("tanaylab/tgstat")
 ## Examples
 
 ```{r, eval=TRUE}
+library(tgstat)
 set.seed(seed = 60427)
 rows <- 3000
 cols <- 3000
